--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,8 +51,8 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="Đăng kí"><a href="/register">Register</a></button>
                 
               </form>
-              <form action="/logout?_method=DELETE" method="POST">
-                <button type="submit">LogOut</button>
+              <form >
+                <button type="submit"><a href="/login">Logout</a></button>
             </form>
             </div>
           </nav>
@@ -161,6 +161,34 @@
             </div>
           </div>
       </div>
-
+      
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-sm">
+          
+          </div>
+          <div class="col-sm">
+            <nav aria-label="...">
+              <ul class="pagination">
+                <li class="page-item disabled">
+                  <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item active" aria-current="page">
+                  <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">Next</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-sm">
+            
+          </div>
+        </div>
+      </div>
 </body>
 </html>
